--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
         <ul class="car-info">
           <li class="feature">
-            <img src="img/gear.svg" alt="шестеренка" class="feature-icon">
-            <span class="feature-title">Привод</span>
-            <span class="feature-details">полный</span>
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
           </li>
 
           <li class="feature">
@@ -53,9 +53,9 @@
           </li>
 
           <li class="feature">
-            <img src="img/belt.svg" alt="пристегнутый человек" class="feature-icon">
-            <span class="feature-title">Кол-во мест</span>
-            <span class="feature-details">2</span>
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2019</span>
           </li>
         </ul>
         <button class="btn">Забронировать</button>
@@ -67,9 +67,9 @@
 
         <ul class="car-info">
           <li class="feature">
-            <img src="img/gear.svg" alt="шестеренка" class="feature-icon">
-            <span class="feature-title">Привод</span>
-            <span class="feature-details">полный</span>
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
           </li>
 
           <li class="feature">
@@ -79,9 +79,9 @@
           </li>
 
           <li class="feature">
-            <img src="img/belt.svg" alt="пристегнутый человек" class="feature-icon">
-            <span class="feature-title">Кол-во мест</span>
-            <span class="feature-details">2</span>
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2017</span>
           </li>
         </ul>
         <button class="btn">Забронировать</button>
@@ -93,9 +93,9 @@
 
         <ul class="car-info">
           <li class="feature">
-            <img src="img/gear.svg" alt="шестеренка" class="feature-icon">
-            <span class="feature-title">Привод</span>
-            <span class="feature-details">полный</span>
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
           </li>
 
           <li class="feature">
@@ -105,9 +105,9 @@
           </li>
 
           <li class="feature">
-            <img src="img/belt.svg" alt="пристегнутый человек" class="feature-icon">
-            <span class="feature-title">Кол-во мест</span>
-            <span class="feature-details">4</span>
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2018</span>
           </li>
         </ul>
         <button class="btn">Забронировать</button>
@@ -119,9 +119,9 @@
 
         <ul class="car-info">
           <li class="feature">
-            <img src="img/gear.svg" alt="шестеренка" class="feature-icon">
-            <span class="feature-title">Привод</span>
-            <span class="feature-details">полный</span>
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
           </li>
 
           <li class="feature">
@@ -131,9 +131,9 @@
           </li>
 
           <li class="feature">
-            <img src="img/belt.svg" alt="пристегнутый человек" class="feature-icon">
-            <span class="feature-title">Кол-во мест</span>
-            <span class="feature-details">5</span>
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2019</span>
           </li>
         </ul>
         <button class="btn">Забронировать</button>
@@ -145,9 +145,9 @@
 
         <ul class="car-info">
           <li class="feature">
-            <img src="img/gear.svg" alt="шестеренка" class="feature-icon">
-            <span class="feature-title">Привод</span>
-            <span class="feature-details">полный</span>
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
           </li>
 
           <li class="feature">
@@ -157,23 +157,23 @@
           </li>
 
           <li class="feature">
-            <img src="img/belt.svg" alt="пристегнутый человек" class="feature-icon">
-            <span class="feature-title">Кол-во мест</span>
-            <span class="feature-details">2</span>
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2018</span>
           </li>
         </ul>
         <button class="btn">Забронировать</button>
       </li>
 
       <li class="car">
-        <img src="img/6.png" alt="Аренда Chevrolet Camaro" class="car-img">
-        <h3 class="car-name">Аренда Chevrolet Camaro</h3>
+        <img src="img/6.png" alt="Chevrolet Camaro" class="car-img">
+        <h3 class="car-name">Chevrolet Camaro</h3>
 
         <ul class="car-info">
           <li class="feature">
-            <img src="img/gear.svg" alt="шестеренка" class="feature-icon">
-            <span class="feature-title">Привод</span>
-            <span class="feature-details">полный</span>
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
           </li>
 
           <li class="feature">
@@ -183,9 +183,87 @@
           </li>
 
           <li class="feature">
-            <img src="img/belt.svg" alt="пристегнутый человек" class="feature-icon">
-            <span class="feature-title">Кол-во мест</span>
-            <span class="feature-details">4</span>
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2019</span>
+          </li>
+        </ul>
+        <button class="btn">Забронировать</button>
+      </li>
+
+      <li class="car">
+        <img src="img/7.png" alt="Maserati Quattroporte" class="car-img">
+        <h3 class="car-name">Maserati Quattroporte</h3>
+
+        <ul class="car-info">
+          <li class="feature">
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
+          </li>
+
+          <li class="feature">
+            <img src="img/wheel.svg" alt="колесо" class="feature-icon">
+            <span class="feature-title">Двигатель</span>
+            <span class="feature-details">3.0 л.с.</span>
+          </li>
+
+          <li class="feature">
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2018</span>
+          </li>
+        </ul>
+        <button class="btn">Забронировать</button>
+      </li>
+
+      <li class="car">
+        <img src="img/8.png" alt="Dodge Challenger" class="car-img">
+        <h3 class="car-name">Dodge Challenger</h3>
+
+        <ul class="car-info">
+          <li class="feature">
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
+          </li>
+
+          <li class="feature">
+            <img src="img/wheel.svg" alt="колесо" class="feature-icon">
+            <span class="feature-title">Двигатель</span>
+            <span class="feature-details">6.4 л.с.</span>
+          </li>
+
+          <li class="feature">
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2019</span>
+          </li>
+        </ul>
+        <button class="btn">Забронировать</button>
+      </li>
+
+      <li class="car">
+        <img src="img/9.png" alt="Nissan GT-R" class="car-img">
+        <h3 class="car-name">Nissan GT-R</h3>
+
+        <ul class="car-info">
+          <li class="feature">
+            <img src="img/transmission.png" alt="коробка передач" class="feature-icon">
+            <span class="feature-title">Коробка</span>
+            <span class="feature-details">автомат</span>
+          </li>
+
+          <li class="feature">
+            <img src="img/wheel.svg" alt="колесо" class="feature-icon">
+            <span class="feature-title">Двигатель</span>
+            <span class="feature-details">3.8 л.с.</span>
+          </li>
+
+          <li class="feature">
+            <img src="img/year.png" alt="год" class="feature-icon">
+            <span class="feature-title">Год выпуска</span>
+            <span class="feature-details">2019</span>
           </li>
         </ul>
         <button class="btn">Забронировать</button>
