--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <header class="header">
@@ -27,7 +28,7 @@
     <div class="container promo-container">
       <h1 class="promo-title">Аренда премиальных автомобилей</h1>
       <p class="promo-description">В нашем клубе имеется солидная коллекция спортивных автомобилей — от достаточно распространенных серийных машин до настоящего гоночного эксклюзива. Воспользуйтесь уникальной возможностью побывать за рулем настоящей легенды и узнать, на что она способна за пределами гоночной трассы!</p>
-      <a href="#cars" class="btn promo-btn">Посмотреть автомобили</a>
+      <button class="btn promo-btn">Посмотреть автомобили</button>
     </div>
   </section>
 
@@ -58,7 +59,7 @@
             <span class="feature-details">2</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -84,7 +85,7 @@
             <span class="feature-details">2</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -110,7 +111,7 @@
             <span class="feature-details">4</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -136,7 +137,7 @@
             <span class="feature-details">5</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -162,7 +163,7 @@
             <span class="feature-details">2</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -188,7 +189,7 @@
             <span class="feature-details">4</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
     </ul>
   </section>
