--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <header class="header">
@@ -27,7 +28,7 @@
     <div class="container promo-container">
       <h1 class="promo-title">Аренда премиальных автомобилей</h1>
       <p class="promo-description">В нашем клубе имеется солидная коллекция спортивных автомобилей — от достаточно распространенных серийных машин до настоящего гоночного эксклюзива. Воспользуйтесь уникальной возможностью побывать за рулем настоящей легенды и узнать, на что она способна за пределами гоночной трассы!</p>
-      <a href="#cars" class="btn promo-btn">Посмотреть автомобили</a>
+      <button class="btn promo-btn">Посмотреть автомобили</button>
     </div>
   </section>
 
@@ -58,7 +59,7 @@
             <span class="feature-details">2019</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -84,7 +85,7 @@
             <span class="feature-details">2017</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -110,7 +111,7 @@
             <span class="feature-details">2018</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -136,7 +137,7 @@
             <span class="feature-details">2019</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -162,7 +163,7 @@
             <span class="feature-details">2018</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -188,7 +189,7 @@
             <span class="feature-details">2019</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -214,7 +215,7 @@
             <span class="feature-details">2018</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -240,7 +241,7 @@
             <span class="feature-details">2019</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
 
       <li class="car">
@@ -266,13 +267,13 @@
             <span class="feature-details">2019</span>
           </li>
         </ul>
-        <button class="btn">Забронировать</button>
+        <button class="btn car-btn">Забронировать</button>
       </li>
     </ul>
   </section>
 
   <section class="order" id="order">
-    <div class="container">
+    <div class="container order-container">
       <h2 class="subtitle order-title">Узнать цену и забронировать</h2>
       <p class="order-subtitle">Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования</p>
 
@@ -282,6 +283,8 @@
         <input type="text" name="car" placeholder="Автомобиль, который вас интересует" class="order-input">
         <button class="btn order-btn" type="button">Узнать цену</button>
       </form>
+
+      <img src="img/rolls.png" alt="Rolls-Royce" class="order-img">
     </div>
   </section>
 
